tests/negative/gold/export-cyclic5-test.gold
tests/negative/export-cyclic5-b.toit:6:1: error: Cyclic export dependency
export *
^~~~~~
tests/negative/export-cyclic5-c.toit:6:1: note: This clause contributes to the 'export' cycle
export *
^~~~~~
tests/negative/export-cyclic5-c.toit:6:1: error: Cyclic export dependency
export *
^~~~~~
tests/negative/export-cyclic5-b.toit:6:1: note: This clause contributes to the 'export' cycle
export *
^~~~~~
Compilation failed
